--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     ]
   },
   "scripts": {
+    "build": "browserify source/index.js -o dist/main.js -v -d",
     "test": "npm run test-dev & npm run test-serve",
     "test-dev": "watchify test/source/index.js -o test/main.js -v -d",
     "test-serve": "cd ./test/ && Python -m SimpleHTTPServer",
