--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "babel-preset-es2015": "^6.13.2",
     "babelify": "^7.3.0",
     "browserify-versionify": "^1.0.6",
+    "dat-gui": "^0.5.0",
     "glslify": "^5.1.0",
     "pixi.js": "^4.0.0-rc3",
-    "watchify": "^3.7.0",
-    "uglify-js": "^2.7.3"
+    "uglify-js": "^2.7.3",
+    "watchify": "^3.7.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
